add video about page

--- a/index.html
+++ b/index.html
@@ -460,22 +460,22 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, aliquid. Vero porro numquam, qui hic
             repudiandae quo magnam libero. Laborum delectus ullam nisi facilis inventore! Impedit tenetur pariatur
             necessitatibus tempora.
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, maiores! Ducimus mollitia fuga nisi
-              numquam odit perspiciatis consectetur, deserunt hic? Quidem impedit molestias magnam debitis explicabo
-              unde dicta consectetur earum!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, inventore nulla porro autem minus totam,
-              vel accusamus voluptas assumenda deserunt tenetur debitis nemo dicta ea architecto. Sapiente dolores
-              maiores enim.
-            </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, maiores! Ducimus mollitia fuga nisi
+            numquam odit perspiciatis consectetur, deserunt hic? Quidem impedit molestias magnam debitis explicabo
+            unde dicta consectetur earum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, inventore nulla porro autem minus totam,
+            vel accusamus voluptas assumenda deserunt tenetur debitis nemo dicta ea architecto. Sapiente dolores
+            maiores enim.
+          </p>
 
-            <p>
-              Phone: +1 111 1111
-              <br>
-              Email: alguien@example.com
-              <br>
-              Adress: Esquina del romboy de san rafael
-            </p>
+          <p>
+            Phone: +1 111 1111
+            <br>
+            Email: alguien@example.com
+            <br>
+            Adress: Esquina del romboy de san rafael
+          </p>
           </p>
         </div>
 
@@ -508,7 +508,7 @@
 
   </section>
 
-  <footer class="mt-4">
+  <footer class="my-4">
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-4 light-text">
@@ -526,7 +526,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-  </script>
+    </script>
 </body>
 
 </html>
